// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`section minimum-guidance characterization (P4 descriptor move) > sectionMinimumGuidance for positioningBuyerICP is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- Lead the body with \`keyFindings\` when evidence supports it: each finding is one plain-language sentence with basis \`measured\`, \`sourced\`, \`benchmark\`, or \`assumption\`; source-backed findings carry sourceUrls, assumptions may leave sourceUrls empty.",
  "- Populate a block only when evidence supports it; use that block's \`blockGap\` shape otherwise. A gap is one client-plain coverage sentence plus what was searched or what should be checked next.",
  "- Do not write validator counts, tool names, budget-exhaustion notes, or internal process language in reader-facing fields.",
  "- BuyerICPSectionOutput exact item contracts: \`body.icpExistenceCheck.firmographicCuts[]\` keys are \`cutType\`, \`value\`, optional \`accountCount\`, \`source\`, \`sourceUrl\`, \`dateObserved\`.",
  "- \`cutType\` must be one of \`industry\`, \`employeeBands\`, \`revenueBands\`, \`geography\`, \`techStack\`.",
  "- Populate firmographic cuts only when evidence supports them; otherwise use \`body.icpExistenceCheck.blockGap\`.",
  "- \`body.personaReality.personas[]\` keys are \`name\`, \`title\`, \`company\`, \`sourceUrl\`, \`role\`, \`seniority\`, optional \`teamSize\`, \`evidence\`.",
  "- \`role\` must be one of \`champion\`, \`economic-buyer\`, \`decision-maker\`, \`influencer\`, \`end-user\`, \`gatekeeper\`.",
  "- \`body.personaReality.personas[].name\` must be a named person, public reviewer handle, or named source identity present in fetched evidence.",
  "- Each persona row is allowed only when the exact \`name\` string appears in fetched tool evidence or a corpus excerpt next to its company, title, source URL, or buyer role evidence.",
  "- Role labels, segments, departments, seniority labels, and company names do not satisfy \`body.personaReality.personas[].name\`.",
  "- Do not invent named people. If no named buyer identity exists in the fetched evidence, use \`body.personaReality.blockGap\` instead of padding persona rows.",
  "- \`body.awarenessDistribution.levels[]\` keys are \`level\`, optional \`share\`, \`evidence\`, optional \`sampleQuery\`; \`share\` must be a string like \`20%\`, \`low\`, or \`medium\`, never a number. Prefer \`dominantLevel\` with reasoning when the evidence supports a qualitative awareness read.",
  "- \`body.buyingContext.triggers[]\` keys are \`name\`, \`detectionSignal\`, \`window\`, \`evidence\`, optional \`sourceUrl\`; do not use \`event\`, \`urgency\`, or \`buyerQuote\`.",
  "- \`window\` must be one of \`immediate\`, \`weeks\`, \`quarters\`; use \`body.buyingContext.blockGap\` when triggers are not evidenced.",
  "- \`body.clusters.venues[]\` keys are \`bucketType\`, \`name\`, \`audienceSize\`, \`sourceUrl\`, \`whyItMatters\`; do not use \`type\`, \`icpConcentration\`, \`accessMethod\`, or \`evidence\`.",
  "- \`bucketType\` must be one of \`community\`, \`newsletter\`, \`conference\`, \`podcast\`, \`slack-group\`, \`event\`; \`audienceSize\` is optional and must be omitted when not verified.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > sectionMinimumGuidance for positioningCompetitorLandscape is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- CompetitorLandscapeSectionOutput strategic fields: \`body.whereToAttackVsConcede { attack, concede, rationale }\` and \`body.incumbentBlindSpot { incumbent, blindSpot, whyTheyMissIt }\` are required.",
  "- CompetitorLandscapeSectionOutput strategic repair: \`body.incumbentBlindSpot.incumbent\` must name the incumbent/status-quo and the buyer pain or positioning miss as a full strategic judgment; it must not be only a competitor name, category label, or section summary. If the fetched evidence does not support that judgment, write exactly \`evidence gap: <missing incumbent/status-quo signal>\`.",
  "- Lead the body with \`keyFindings\` when evidence supports it: each finding is one plain-language sentence with basis \`measured\`, \`sourced\`, \`benchmark\`, or \`assumption\`; source-backed findings carry sourceUrls, assumptions may leave sourceUrls empty.",
  "- Populate a block only when evidence supports it; use that block's \`blockGap\` shape otherwise. A gap is one client-plain coverage sentence plus what was searched or what should be checked next.",
  "- Do not write validator counts, tool names, budget-exhaustion notes, or internal process language in reader-facing fields.",
  "- CompetitorLandscapeSectionOutput grounding: cite only competitor URLs and numeric pricing/deal values that appear in fetched tool evidence, the evidence transcript, pre-normalized live ad evidence, or ResearchInput/corpus; if the source was not fetched, mark it as an evidence gap instead of asserting the URL or number.",
  "- Competitor categories are evidence claims: include direct, status-quo, indirect, or DIY competitors only when public evidence, ResearchInput, or corpus material supports that buyer alternative.",
  "- Subject-derived current-workflow competitors must come from this subject's actual buyer context; use a block gap when the workflow is plausible but not evidenced.",
  "- Populate positioning axes, pricing reality, share of voice, public weaknesses, narrative arcs, ad presence, and ad evidence only when evidence supports them; use the block gap otherwise.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > sectionMinimumGuidance for positioningDemandIntent is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- DemandIntentSectionOutput strategic fields: \`body.orderedMoves[]\` requires at least two sequenced moves with consecutive \`rank\` values, backward-only \`dependsOn\` rank references, and \`rationale\`; \`body.provesWrongIf { metric, threshold, window }\` is required.",
  "- Lead the body with \`keyFindings\` when evidence supports it: each finding is one plain-language sentence with basis \`measured\`, \`sourced\`, \`benchmark\`, or \`assumption\`; source-backed findings carry sourceUrls, assumptions may leave sourceUrls empty.",
  "- Populate a block only when evidence supports it; use that block's \`blockGap\` shape otherwise. A gap is one client-plain coverage sentence plus what was searched or what should be checked next.",
  "- Do not write validator counts, tool names, budget-exhaustion notes, or internal process language in reader-facing fields.",
  "- DemandIntentSectionOutput exact item contracts: \`body.keywordDemand.keywords[]\` keys are \`keyword\`, \`monthlyVolume\`, optional \`monthlyVolumeValue\`, optional \`cpc\`, optional \`cpcValue\`, optional \`difficulty\`, \`intentType\`, \`top3RankingDomains\`, \`sourceTitle\`, \`sourceUrl\`, \`dateObserved\`.",
  "- \`intentType\` must be one of \`informational\`, \`commercial\`, \`transactional\`, \`navigational\`.",
  "- Put a falsifiable signal on every keyword row: call the \`keyword_volume\` tool (SpyFu) with your candidate keywords in ONE bulk call (up to 100) to get monthly search volume + CPC + difficulty. If \`keyword_volume\` returns a gap/rate-limit/no row, call \`keyword_trends\` (SearchAPI Google Trends) for a real relative-interest fallback.",
  "- Preserve display/provenance strings: keep \`monthlyVolume\` and optional \`cpc\` as reader-facing strings with provenance labels such as \`320 (SpyFu-estimated)\` and \`$4.10 (SpyFu-estimated)\`.",
  "- Numeric siblings are tool-derived only: when \`keyword_volume\` returns data for a keyword, set \`monthlyVolumeValue\` to \`searchVolume\`, \`cpcValue\` to \`cpc\`, and \`difficulty\` to \`difficulty\` as nonnegative numbers. If only \`keyword_trends\` returns data, omit numeric siblings and write \`monthlyVolume\` as a relative-interest string such as \`relative interest 42/100 (SearchAPI Google Trends)\`. Do not invent sortable numbers.",
  "- Provenance honesty is enforced: ONLY label \`monthlyVolume\`/\`cpc\` values 'SpyFu-estimated' when the \`keyword_volume\` tool returned data for that keyword. If SpyFu returns a gap, you MUST NOT claim SpyFu provenance and MUST NOT use model-estimated keyword economics — use \`keyword_trends\` or restate the row as a data gap. Never write \`not disclosed\` — it is rejected by the validator.",
  "- \`body.questionMining.questions[]\` keys are \`question\`, \`surface\`, \`sourceUrl\`, \`frequency\`.",
  "- \`surface\` must be one of \`paa\`, \`reddit\`, \`quora\`, \`community\`, \`forum\`, \`support-thread\`; \`frequency\` must be \`recurring\` or \`occasional\`.",
  "- \`body.contentGaps.gaps[]\` keys are \`topic\`, \`evidenceOfDemand\`, \`weakCompetitorAnswerEvidence\`, \`opportunity\`.",
  "- \`body.intentSignals.items[]\` keys are \`signalType\`, \`description\`, \`sourceUrl\`, optional \`exampleCompany\`.",
  "- \`signalType\` must be one of \`job-posting\`, \`rfp\`, \`news-trigger\`, \`funding\`, \`leadership-change\`.",
  "- \`body.venueMap.venues[]\` keys are \`name\`, \`venueType\`, \`audienceSize\`, \`sourceUrl\`; \`venueType\` must be \`event\`, \`community\`, \`newsletter\`, \`podcast\`, or \`slack\`.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > sectionMinimumGuidance for positioningMarketCategory is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- MarketCategorySectionOutput strategic field: \`body.categoryPowerBet { bet, whyNow, riskAccepted }\` must name the category-power bet and the cost accepted.",
  "- Lead the body with \`keyFindings\` when evidence supports it: each finding is one plain-language sentence with basis \`measured\`, \`sourced\`, \`benchmark\`, or \`assumption\`; source-backed findings carry sourceUrls, assumptions may leave sourceUrls empty.",
  "- Populate a block only when evidence supports it; use that block's \`blockGap\` shape otherwise. A gap is one client-plain coverage sentence plus what was searched or what should be checked next.",
  "- Do not write validator counts, tool names, budget-exhaustion notes, or internal process language in reader-facing fields.",
  "- MarketCategorySectionOutput sources must be real section-level evidence, not invented market statistics.",
  "- Populate adjacent categories, market signals, structural forces, and maturity signals only when fetched evidence supports them; otherwise use the block gap for that block.",
  "- MarketCategorySectionOutput exact contract: \`body.marketSize.bottomUpTam.recipeName\` must be \`keyword-demand-reachable-revenue\`; \`inputs[]\` must include exactly one each for \`keyword-volume\`, \`commercial-intent-share\`, \`conversion-rate\`, and \`acv\`.",
  "- MarketCategorySectionOutput bottom-up TAM: use \`monthly keyword volume x 12 x commercial-intent share x conversion rate x ACV\`; sourced inputs require \`sourceUrl\`, and unavailable inputs must use \`status: "evidence-gap"\` with \`value\` beginning \`evidence gap:\`. If multiple inputs are gaps, state \`directional only — not computed\`; do not substitute analyst TAM for the recipe.",
  "- MarketCategorySectionOutput exact item contracts: \`body.categoryMaturity.classification.supportingSignals[]\` keys are \`signalType\`, \`evidence\`, \`implication\`, optional \`sourceUrl\`; do not add \`name\` or any other key — unrecognized keys fail the strict decoder.",
  "- Optional \`sourceUrl\` fields: when a row has no source, OMIT the \`sourceUrl\` key entirely; never emit an empty string \`""\` — empty URL strings fail the decoder.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > sectionMinimumGuidance for positioningOfferDiagnostic is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- OfferDiagnosticSectionOutput strategic fields: \`body.singleBindingConstraint { constraint, whyBinding, unlockCondition }\`, \`body.orderedMoves[]\`, and \`body.provesWrongIf { metric, threshold, window }\` are required.",
  "- Lead the body with \`keyFindings\` when evidence supports it: each finding is one plain-language sentence with basis \`measured\`, \`sourced\`, \`benchmark\`, or \`assumption\`; source-backed findings carry sourceUrls, assumptions may leave sourceUrls empty.",
  "- Populate a block only when evidence supports it; use that block's \`blockGap\` shape otherwise. A gap is one client-plain coverage sentence plus what was searched or what should be checked next.",
  "- Do not write validator counts, tool names, budget-exhaustion notes, or internal process language in reader-facing fields.",
  "- OfferDiagnosticSectionOutput exact item contracts: \`body.offerMarketFit.proofPoints[]\` keys are \`metric\`, \`value\`, \`reportedBy\`, \`confidence\`, \`sourceUrl\`.",
  "- \`reportedBy\` must be \`company-own\` or \`external-source\`; \`confidence\` must be \`high\`, \`medium\`, or \`low\`.",
  "- \`body.funnelDiagnosis.breaks[]\` keys are \`stageName\`, \`metric\`, \`magnitude\`, \`hypothesis\`, \`sourceUrl\`.",
  "- \`body.channelTruth.channels[]\` keys are \`channelName\`, \`hasWorked\`, \`quantifiedEvidence\`, \`sourceUrl\`.",
  "- \`hasWorked\` must be one of \`yes\`, \`partial\`, \`no\`, \`unknown\`.",
  "- \`body.retentionHealth.signals[]\` keys are \`signalType\`, \`metric\`, \`value\`, \`sourceUrl\`.",
  "- \`signalType\` must be one of \`activation\`, \`retention\`, \`first-value-moment\`.",
  "- \`body.redFlags.items[]\` keys are \`claimedMotion\`, \`actualEvidence\`, \`contradiction\`, \`severity\`; \`severity\` must be \`high\`, \`medium\`, or \`low\`.",
  "- If proof, funnel, channel, retention, or red-flag evidence is unavailable, use the corresponding block gap instead of inventing rows.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > sectionMinimumGuidance for positioningPaidMediaPlan is byte-stable 1`] = `
[
  "- Lead the body with \`keyFindings\` when evidence supports it: each finding is one plain-language sentence with basis \`measured\`, \`sourced\`, \`benchmark\`, or \`assumption\`; source-backed findings carry sourceUrls, assumptions may leave sourceUrls empty.",
  "- Populate a block only when evidence supports it; use that block's \`blockGap\` shape otherwise. A gap is one client-plain coverage sentence plus what was searched or what should be checked next.",
  "- Do not write validator counts, tool names, budget-exhaustion notes, or internal process language in reader-facing fields.",
  "- PaidMediaPlanSectionOutput top-level \`sources[]\` objects use only \`title\`, \`url\`, and optional \`publisher\`; do not emit \`id\` or \`observedAt\`.",
  "- Emit the lean 12-block body only: \`campaignOverview\`, \`campaignPhases\`, \`audienceTypes\`, \`anglesToTest\`, \`creativeStrategy\`, \`creativeFramework\`, \`funnelIdeation\`, \`salesProcess\`, \`competitorMarketingInsights\`, \`competitorReviewInsights\`, \`channelSuggestions\`, \`kpis\`, plus folded internal \`crossSectionInsight\`.",
  "- Do NOT emit \`strategicThesis\`, \`contradictionReconciliation\`, or \`orderedMoves\`; those capstone fields were removed and their reasoning now belongs inside \`crossSectionInsight\`.",
  "- Source sections must be one of \`positioningMarketCategory\`, \`positioningBuyerICP\`, \`positioningCompetitorLandscape\`, \`positioningVoiceOfCustomer\`, \`positioningDemandIntent\`, \`positioningOfferDiagnostic\`, or \`gtmBrief\`; unknown provenance should fail repair, not snap to a default.",
  "- \`body.crossSectionInsight[]\` carries tensions that drove the plan; each item has \`tension\`, \`sourceSections[]\`, \`implicationForPlan\`, \`clientBlindSpot\`, \`secondOrderRisk\`, and \`contrarianInversion\`.",
  "- Paid-media money provenance fields are free strings; prefer \`user-supplied\`, \`tool-measured\`, \`source-reported\`, \`model-estimated\`, or \`unknown\`. Use \`unknown\` when the number cannot be tied to user input, tool measurement, source reporting, or an explicit scenario assumption.",
  "- Optional paid-media numeric siblings are machine-sortable numbers: \`monthlyBudgetValue\`, \`dailySpendValue\`, and \`dailyBudgetValue\`; add numeric siblings only when they come from user-supplied economics, tool-measured data, source-reported data, or explicit scenario assumptions with corresponding provenance.",
  "- Keep display strings and provenance fields. Numeric siblings must not duplicate provenance in strings; keep provenance in \`monthlyBudgetProvenance\`, \`dailySpendProvenance\`, and \`dailyBudgetProvenance\`.",
  "- Omit numeric siblings when the number is unknown or weakly inferred; use \`model-estimated\` only for explicit scenario assumptions.",
  "- If you emit \`monthlyBudgetValue\`, then \`dailySpendValue * 30\`, every \`campaignPhases[].monthlyBudgetValue\`, and the sum of \`audienceTypes[].dailyBudgetValue * 30\` should reconcile to \`monthlyBudgetValue\` within $5; otherwise omit the optional numeric sibling and keep only the display string/provenance.",
  "- \`body.campaignOverview\` keys are exactly \`prose\`, \`monthlyBudget\`, optional \`monthlyBudgetValue\`, \`monthlyBudgetProvenance\`, \`totalMonths\`, \`phaseCount\`, \`dailySpend\`, optional \`dailySpendValue\`, \`dailySpendProvenance\`, \`primaryKpi\`, \`platform\`.",
  "- PaidMediaPlanSectionOutput numeric fields are \`totalMonths\`, \`phaseCount\`, \`staticCount\`, \`videoCount\`, \`totalPerAudience\`, plus optional machine-sortable money siblings \`monthlyBudgetValue\`, \`dailySpendValue\`, and \`dailyBudgetValue\`; emit those as numbers.",
  "- PaidMediaPlanSectionOutput array fields must stay arrays. Budget, daily-spend, slot, and descriptive fields must be JSON strings.",
  "- \`body.campaignPhases[]\` rows have \`phaseName\`, \`monthsLabel\`, \`monthlyBudget\`, optional \`monthlyBudgetValue\`, \`monthlyBudgetProvenance\`, and \`bullets\`.",
  "- \`body.audienceTypes[]\` rows have \`slot\`, \`archetype\`, \`dailyBudget\`, optional \`dailyBudgetValue\`, \`dailyBudgetProvenance\`, \`detail\`, \`sourceSection\`, and \`grounding\`.",
  "- \`body.anglesToTest[]\` contains distinct creative angles. Use diverse DR types across Problem-Aware, Mechanism-Led, Proof-Stacked, Enemy, Contrarian, Identity, and Comparison only when evidence supports them.",
  "- Each angle row has \`shortName\`, \`description\`, free-string \`angleType\`, \`sourceSection\`, and exact \`grounding\` or \`UNVERIFIED\`.",
  "- \`body.creativeStrategy\` keys are exactly \`prose\`, \`staticCount\`, \`videoCount\`, \`totalPerAudience\`; formats must be native to the CHANNEL POLICY's primary platform.",
  "- \`body.creativeFramework[]\` rows have \`label\`, \`angleType\`, deployable \`hook\`, \`executesAngle\`, \`sourceSection\`, and \`grounding\`.",
  "- \`body.funnelIdeation[]\` rows have \`rank\`, \`name\`, \`description\`, and \`whatItProves\`.",
  "- \`body.salesProcess[]\` should use supplied sales assets; if none were supplied, emit one explicit gap asset that says what the client should upload.",
  "- \`body.competitorMarketingInsights[]\` rows have \`competitor\`, \`messaging\`, \`adPlatforms\`, \`estSpendProvenance\`, \`icp\`, \`angles\`, \`positioning\`, \`offer\`, \`sourceSection\`, and \`grounding\`; never invent spend.",
  "- \`body.competitorReviewInsights[]\` rows have \`complaint\`, \`howWeLeverage\`, \`sourceSection\`, and \`grounding\`; never invent quotes.",
  "- \`body.channelSuggestions[]\` rows use verdict \`FIX\`, \`REWORK\`, \`REVIEW\`, \`KEEP\`, \`ADD\`, \`KILL\`, or \`SCALE\`.",
  "- \`body.kpis[]\` rows have \`metric\`, \`role\`, and \`definition\`.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > sectionMinimumGuidance for positioningVoiceOfCustomer is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- VoiceOfCustomerSectionOutput strategic field: \`body.fourForcesBalanceVerdict { push, pull, anxiety, habit, balanceVerdict }\` is required and must make the Four-Forces balance explicit.",
  "- Lead the body with \`keyFindings\` when evidence supports it: each finding is one plain-language sentence with basis \`measured\`, \`sourced\`, \`benchmark\`, or \`assumption\`; source-backed findings carry sourceUrls, assumptions may leave sourceUrls empty.",
  "- Populate a block only when evidence supports it; use that block's \`blockGap\` shape otherwise. A gap is one client-plain coverage sentence plus what was searched or what should be checked next.",
  "- Do not write validator counts, tool names, budget-exhaustion notes, or internal process language in reader-facing fields.",
  "- VoiceOfCustomerSectionOutput exact item contracts: \`body.painLanguage.quotes[]\` keys are \`verbatimText\`, \`source\`, \`sourceUrl\`, \`painTheme\`, \`painIntensity\`, plus optional \`role\` (reviewer role/handle) and \`date\` (when the source discloses it).",
  "- \`source\` must be one of \`g2\`, \`reddit\`, \`hackernews\`, \`sales-call\`, \`support-thread\`, \`twitter\`, \`other\`; \`painIntensity\` must be \`high\`, \`medium\`, or \`low\`.",
  "- Pain quotes are LOAD-BEARING: every \`verbatimText\` must trace to a fetched source or corpus excerpt. NEVER present the subject company's own homepage, marketing, or testimonial copy as buyer pain — pain quotes come only from independent sources (review sites, forums, support threads), never the audited company's own domain.",
  "- When a \`reviews\` snippet is truncated, chain \`firecrawl\` on its \`sourceUrl\` to recover the full verbatim quote (and the reviewer \`role\`/\`date\` when shown) rather than emitting a clipped quote.",
  "- \`body.objections.items[]\` keys are \`objectionText\`, \`category\`, \`frequency\`, \`howToHandle\`, \`sourceUrl\`.",
  "- \`category\` must be one of \`price\`, \`feature\`, \`trust\`, \`switching-cost\`, \`timing\`, \`stakeholder\`, \`other\`; \`frequency\` must be \`recurring\`, \`occasional\`, or \`one-off\`.",
  "- \`body.switchingStories.stories[]\` keys are \`priorSolution\`, \`reasonToLeave\`, \`decisionPath\`, optional \`exampleCompany\`, \`sourceUrl\`.",
  "- \`body.decisionCriteria.criteria[]\` keys are \`criterion\`, \`statedBy\`, \`evidenceQuote\`, \`sourceUrl\`; \`statedBy\` must be \`buyer\`, \`champion\`, \`influencer\`, or \`blocker\`.",
  "- \`body.successLanguage.quotes[]\` keys are \`verbatimText\`, \`source\`, \`sourceUrl\`, \`afterStatePattern\`.",
  "- Every quote-bearing block may use \`blockGap\` instead of rows when retrieval comes up empty. If all quote blocks are gapped, set top-level \`retrievalSummary\` with what was searched and the next sourcing plan.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > strategicDepthGuidance for positioningBuyerICP is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > strategicDepthGuidance for positioningCompetitorLandscape is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- CompetitorLandscapeSectionOutput strategic fields: \`body.whereToAttackVsConcede { attack, concede, rationale }\` and \`body.incumbentBlindSpot { incumbent, blindSpot, whyTheyMissIt }\` are required.",
  "- CompetitorLandscapeSectionOutput strategic repair: \`body.incumbentBlindSpot.incumbent\` must name the incumbent/status-quo and the buyer pain or positioning miss as a full strategic judgment; it must not be only a competitor name, category label, or section summary. If the fetched evidence does not support that judgment, write exactly \`evidence gap: <missing incumbent/status-quo signal>\`.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > strategicDepthGuidance for positioningDemandIntent is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- DemandIntentSectionOutput strategic fields: \`body.orderedMoves[]\` requires at least two sequenced moves with consecutive \`rank\` values, backward-only \`dependsOn\` rank references, and \`rationale\`; \`body.provesWrongIf { metric, threshold, window }\` is required.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > strategicDepthGuidance for positioningMarketCategory is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- MarketCategorySectionOutput strategic field: \`body.categoryPowerBet { bet, whyNow, riskAccepted }\` must name the category-power bet and the cost accepted.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > strategicDepthGuidance for positioningOfferDiagnostic is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- OfferDiagnosticSectionOutput strategic fields: \`body.singleBindingConstraint { constraint, whyBinding, unlockCondition }\`, \`body.orderedMoves[]\`, and \`body.provesWrongIf { metric, threshold, window }\` are required.",
]
`;

exports[`section minimum-guidance characterization (P4 descriptor move) > strategicDepthGuidance for positioningPaidMediaPlan is byte-stable 1`] = `[]`;

exports[`section minimum-guidance characterization (P4 descriptor move) > strategicDepthGuidance for positioningVoiceOfCustomer is byte-stable 1`] = `
[
  "- Strategic depth fields: \`body.strategicInsight\` is required with \`strategicVerdict\` and \`keyTension { tension, side, costOfPosition }\`; emit \`nonObviousRead\` and \`secondOrderImplication\` only when the section evidence earns them.",
  "- Strategic depth fields must be specific strategic judgments or one plain-language coverage gap sentence; do not restate verdict/statusSummary or summarize the section.",
  "- Strategic depth fields must not carry numeric precision absent from fetched evidence or the corpus; use qualitative judgment or the gap shape over invented numbers.",
  "- VoiceOfCustomerSectionOutput strategic field: \`body.fourForcesBalanceVerdict { push, pull, anxiety, habit, balanceVerdict }\` is required and must make the Four-Forces balance explicit.",
]
`;
